--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "longman/telegram-bot": "^0.72.0",
+        "irazasyed/telegram-bot-sdk": "^3.4",
+        "vlucas/phpdotenv": "^5.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
